--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
@@ -11,6 +12,9 @@
         <div class="row">
           <div class="content-container">
             <h1>FreeCodeCamp Wikipedia Viewer</h1>
+            <div class="random-wiki">
+                <button type="button" class="btn btn-default"><a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Random Article</a></button>
+            </div>
             <form>
               <input type="text" class="form-control input-lg" id="form" placeholder="Lets search for....">
             </form>
