updated random article

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
           <div class="content-container">
             <h1>FreeCodeCamp Wikipedia Viewer</h1>
             <div class="random-wiki">
-                <button type="button" class="btn btn-default"><a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Random Article</a></button>
+              <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" class="btn btn-default" role="button" aria-pressed="true">Random Article</a>
+
             </div>
             <form>
               <input type="text" class="form-control input-lg" id="form" placeholder="Lets search for....">
